--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,4 +1,10 @@
 /* -------footer--- */
+.footer {
+width: 100%;
+background: url("../../images/footerbg.png");
+background-repeat: no-repeat;
+background-size: 100% 100%;
+}
 .footer h3 {
     font-weight: 800;
     font-size: 24px;
