--- a/src/components/InfoBox/style.css
+++ b/src/components/InfoBox/style.css
@@ -2,12 +2,14 @@
 
 .box-1 {
   position: relative;
+  height: 296px;
 }
-  
+
 .banner-3 .box-1 {
   border-radius: 19px;
-  border:2px solid rgba(237, 30, 36, 0.2);
+  border: 2px solid rgba(237, 30, 36, 0.2);
 }
+
 .box1-img {
   position: absolute;
   top: -15%;
@@ -16,14 +18,14 @@
   transform: translateX(50%);
 }
 
-.box-text p{
+.box-text p {
   font-family: "poppins";
 }
 
-.background-red{
-    background-color: rgba(237, 30, 36, 0.2);
+.background-red {
+  background-color: rgba(237, 30, 36, 0.2);
 }
 
-.background-grey{
-    background-color: #191919;
+.background-grey {
+  background-color: #191919;
 }
