--- a/src/components/Missionbox/style.css
+++ b/src/components/Missionbox/style.css
@@ -1,15 +1,16 @@
-.box-1 {
+.box-mission {
 	position: relative;
 }
 
-.box-1 {
+.box-mission {
 	border-radius: 19px;
 	border: 2px solid rgba(237, 30, 36, 0.2);
+	height: 529px;
 }
 
 .box-mission-img {
 	position: absolute;
-	top: -10%;
+	top: -8%;
 	text-align: center;
 	right: 50%;
 	transform: translateX(50%);
