some change on designing

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -23,7 +23,11 @@
   color: #ED1E24;
 }
 
-.footer span {
+.img-link {
+  height: 30px;
+}
+
+.footer .link {
   margin-top: 30px;
   color: #ffffff;
   font-style: normal;
