--- a/src/components/InfoBox/style.css
+++ b/src/components/InfoBox/style.css
@@ -7,7 +7,7 @@
 
 .banner-3 .box-info {
   border-radius: 19px;
-  border: 2px solid rgba(237, 30, 36, 0.2);
+  border: 1px solid #ed1e24;
 }
 
 .box-info-img {
