--- a/src/components/Missionbox/style.css
+++ b/src/components/Missionbox/style.css
@@ -4,7 +4,7 @@
 
 .box-mission {
 	border-radius: 19px;
-	border: 2px solid rgba(237, 30, 36, 0.2);
+	border: 1px solid #ed1e24;
 	height: 529px;
 }
 
