--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -40,6 +40,6 @@
 
 .box-team {
   border-radius: 19px;
-  border: 2px solid rgba(237, 30, 36, 0.2);
+  border: 1px solid #ED1E24;
   height: 606px;
 }
