--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,18 +6,36 @@
   background-size: 100% 100%;
 }
 
+.footer-line {
+  background-image: linear-gradient(#ed1e24 100%, #1e1e1e 100%);
+  width: 100%;
+  background-repeat: no-repeat;
+  height: 3px;
+
+}
+
 .footer h3 {
+  font-style: normal;
   font-weight: 800;
   font-size: 24px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ed1e24;
+  color: #ED1E24;
 }
-  
-.footer span {
+
+.img-link {
+  height: 30px;
+}
+
+.footer .link {
   margin-top: 30px;
   color: #ffffff;
-  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
 }
 
 .footer span img {
