--- a/src/components/InfoBox/style.css
+++ b/src/components/InfoBox/style.css
@@ -1,25 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-.box-1 {
+.box-info {
   position: relative;
   height: 296px;
 }
 
-.banner-3 .box-1 {
+.banner-3 .box-info {
   border-radius: 19px;
-  border: 2px solid rgba(237, 30, 36, 0.2);
+  border: 1px solid #ed1e24;
 }
 
-.box1-img {
+.box-info-img {
   position: absolute;
-  top: -15%;
+  top: -16%;
   text-align: center;
   right: 50%;
   transform: translateX(50%);
 }
 
-.box-text p {
-  font-family: "poppins";
+.info-box-text p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+}
+
+.info-box-text h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
 }
 
 .background-red {
