--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Pridi:wght@200;300;400;500;600;700&display=swap');
 
 .header {
   font-size: 15px;
@@ -10,7 +11,7 @@
 }
 
 /* -------banner-2--------- */
-.banner-2 h2 {
+.banner-machine h2 {
   font-weight: 800;
   font-size: 38px;
   line-height: 115.5%;
@@ -18,7 +19,7 @@
   color: #ed1e24;
 }
 
-.banner-2 ul li {
+.banner-machine ul li {
   font-family: "Poppins";
   font-style: normal;
   font-weight: 600;
@@ -28,7 +29,7 @@
   color: #ffffff;
 }
 
-.banner-2 ul {
+.banner-machine ul {
   margin-top: 50px;
 }
 
@@ -46,23 +47,54 @@
   margin-bottom: 69px;
 }
 
-/* ---banner-4--- */
-.banner-4 h2 {
+/* ---banner-about--- */
+
+.banner-about {
+  margin-top: 120px;
+}
+
+.banner-about h2 {
+  font-style: normal;
   font-weight: 700;
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
-.banner-4 span {
+.banner-about span {
   color: #ed1e24;
 }
 
-.banner-4 p {
+.banner-about p {
+  font-family: 'Pridi', serif;
+  font-style: normal;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 22px;
   line-height: 147.5%;
   letter-spacing: 0.05em;
+  color: #FFFFFF;
+}
+
+.yatra-btn {
+  display: flex;
+  justify-content: center;
+}
+
+.explore {
+  font-family: 'Orbitron';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+  width: 295px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ED1E24;
+  border-radius: 13px;
   color: #ffffff;
 }
