--- a/src/components/Footerbox/style.css
+++ b/src/components/Footerbox/style.css
@@ -1,6 +1,8 @@
 .display-flex {
     display: flex;
-    margin-top: 50px;
+    /* margin-top: 50px; */
+    align-items: center;
+    height: 60%;
 }
 
 .footer h3 {
