--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -106,3 +106,27 @@
 .justified{
   text-align: justify;
 }
+
+/* .chain-line{
+  width: 100px !important;
+} */
+
+.chain-break{
+  width: 50%;
+}
+/* ----------Responsive-------------- */
+@media screen and (max-width:992px) {
+  .box-info{
+    margin-top: 80px;
+  }
+  .explore{
+    margin-top: 50px;
+  }
+  .mt-small{
+    margin-top: 40px;
+  }
+  .chain-break{
+    width: 100%;
+  }
+ 
+}
