change the font family across the website

--- a/src/components/InfoBox/style.css
+++ b/src/components/InfoBox/style.css
@@ -25,6 +25,7 @@
   line-height: 115.5%;
   letter-spacing: 0.05em;
   color: #FFFFFF;
+  font-family: "Poppins";
 }
 
 .info-box-text h3 {
@@ -34,6 +35,8 @@
   line-height: 115.5%;
   letter-spacing: 0.05em;
   color: #FFFFFF;
+  font-family: "Poppins";
+
 }
 
 .background-red {
