--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -67,9 +67,9 @@
 }
 
 .banner-about p {
-  font-family: 'Pridi', serif;
+  font-family: 'outfit';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 22px;
   line-height: 147.5%;
   letter-spacing: 0.05em;
