change accordian styles

--- a/src/components/Accodian/style.css
+++ b/src/components/Accodian/style.css
@@ -19,6 +19,15 @@
 	border-top-left-radius: none;
 	border-top-right-radius: none;
 }
+ .faq-description {
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 130%;
+letter-spacing: 0.135em;
+color: #FFFFFF;
+
+  }
 
 .accordion-button:not(.collapsed) {
 	font-style: normal;
