--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -67,9 +67,9 @@
 }
 
 .banner-about p {
-  font-family: 'Pridi', serif;
+  font-family: 'outfit';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 22px;
   line-height: 147.5%;
   letter-spacing: 0.05em;
@@ -85,7 +85,8 @@
   font-family: 'Orbitron';
   font-style: normal;
   font-weight: 700;
-  font-size: 38px;
+  font-size: 22px;
+  text-decoration: none;
   line-height: 115.5%;
   letter-spacing: 0.05em;
   color: #FFFFFF;
@@ -97,4 +98,11 @@
   background: #ED1E24;
   border-radius: 13px;
   color: #ffffff;
+}
+.explore:hover{
+  color: #FFFFFF;
+}
+
+.justified{
+  text-align: justify;
 }
