--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,6 +2,9 @@
 .navbar .navbar-nav .nav-link.active {
     color: #ED1E24 !important;
 }
+.navbar-toggler:focus {
+    color: transparent;
+  }
 
 .active {
     color: #ED1E24;
@@ -25,6 +28,9 @@
     letter-spacing: 0.05em;
     color: #FFFFFF;
 }
+.email{
+    display: flex;
+}
 
 .home {
     font-style: normal;
@@ -34,4 +40,13 @@
     letter-spacing: 0.05em;
     color: #FFFFFF;
 
+}
+@media screen and (max-width:992px) {
+    .phn-no{
+    display: none;
+
+    }
+    .email{
+        display: none;
+    }
 }
