--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -32,6 +32,11 @@
     display: flex;
 }
 
+/* @media (max-width:992px){
+    .navbar-collapse{
+        display: none;
+    }
+} */
 .home {
     font-style: normal;
     font-weight: 700;
