--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,5 +1,6 @@
 /* -------footer--- */
 .footer {
+  font-family: 'Helvetica';
   width: 100%;
   background: url('../../images/footerbg.png');
   background-repeat: no-repeat;
