--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 
+ /* @import url('https://fonts.cdnfonts.com/css/helvetica-2'); */
+                
 body {
   background-color: #121212;
   font-family: 'Orbitron', sans-serif;
