--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -11,6 +11,7 @@
 }
 
 .nav-details {
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -20,6 +21,7 @@
 }
 
 .nav-link {
+  font-family: 'Helvetica';
   font-family: 'Orbitron';
   font-style: normal;
   font-weight: 700;
