--- a/src/components/Teambox/style.css
+++ b/src/components/Teambox/style.css
@@ -4,6 +4,7 @@
 }
 
 .teambox-text p {
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -14,6 +15,7 @@
 }
 
 .teambox-text h3 {
+  font-family: 'Helvetica';
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -23,6 +25,7 @@
 }
 
 .teambox-text h4 {
+  font-family: 'Helvetica';
   font-weight: 700;
   font-size: 18px;
   line-height: 115.5%;
