--- a/src/components/Servicebox/style.css
+++ b/src/components/Servicebox/style.css
@@ -7,9 +7,15 @@
 	order: 1;
 	/* text-align: end; */
 }
+
+.service-desc{
+	margin-top: 128px;
+}
+
 .service-description p {
+	font-family: 'Helvetica';
 	font-style: normal;
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 18px;
 	line-height: 155%;
 	letter-spacing: 0.05em;
@@ -22,8 +28,8 @@
 		order: 2 !important;
 		margin-top: 35px;
 		text-align: center;
-
 	}
+	
 	.p-order{
 		order: 1 !important ;
 	}
