--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,15 +1,21 @@
+.grid-container{
+    margin-top: 142px;
+    margin-bottom: 142px;
 
+}
 .photo-gallery {
-    font-family: 'Poppins';
+    font-family: 'Helvetica'; 
     font-style: normal;
     font-weight: 400;
     font-size: 48px;
-    line-height: 72px;
     color: #FFFFFF;
+    line-height: 55px;
+    line-height: 55px;
+
 }
 
 .gallery-desc {
-    font-family: 'Poppins';
+    font-family: 'Helvetica'; 
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
