--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Pridi:wght@200;300;400;500;600;700&display=swap');
 
+
 .header {
   font-size: 15px;
 }
@@ -11,7 +12,7 @@
 }
 
 /* -------banner-2--------- */
-.banner-machine {
+.banner-machine{
   margin-top: 20px;
 }
 .banner-machine h2 {
@@ -70,8 +71,8 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ffffff;
-  margin-bottom: 0;
+  color: #FFFFFF;
+  margin-bottom:0;
   font-family: Helvetica;
 }
 
@@ -149,7 +150,7 @@
   .banner-machine .chain-break-machine {
     width: 100%;
   }
-  .banner-3 {
+  .banner-3{
     margin-top: 144px !important;
   }
   .banner-3 h2 {
