--- a/src/components/InfoBox/style.css
+++ b/src/components/InfoBox/style.css
@@ -45,3 +45,8 @@
 .background-grey {
   background-color: #191919;
 }
+@media screen and (max-width: 1200px) and (min-width: 990px) {
+  .banner-3 .box-info {
+    height: 320px;
+  }
+}
