--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,36 +1,45 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-
 .contact-us-section {
   margin-top: 110px;
 }
+.contact-us-section .container {
+  padding-right: 0 !important;
+}
 
-.contact-banner{
+.contact-banner {
   background-color: #252525;
   height: 507px;
   display: flex;
   align-items: center;
 }
-.chain-sm{
-  /* width: 50% !important; */
+.chain-sm {
+  padding-left: 40px;
 }
 .contact-us {
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 38px;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
+  font-family: Helvetica;
+  line-height: 115.5%;
+}
+.contact-data {
+  font-family: Helvetica;
 }
 
-
 .contact-data p {
-  font-family: 'Outfit';
   font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 115.5%;
   letter-spacing: 0.135em;
-  color: #FFFFFF;
+  color: #ffffff;
+  margin-left: 50px;
+}
+.contact-data .address {
+  margin-left: 45px !important;
 }
 
 .contact-info {
@@ -40,11 +49,13 @@
   line-height: 115.5%;
   letter-spacing: 0.05em;
   padding-top: 20px;
+  margin-bottom: 20px;
 }
 
 .touch {
   background-color: #252525;
-  border: 2px solid #ED1E24;
+  border: 2px solid #ed1e24;
+  font-family: Helvetica;
 }
 
 .touch h4 {
@@ -53,7 +64,7 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .touch p {
@@ -62,7 +73,7 @@
   font-size: 18px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .text-area {
@@ -85,6 +96,10 @@ input {
   margin-top: 200px !important;
 }
 
+.banner-contact .container {
+  padding-right: 0 !important;
+}
+
 .text-area {
   height: 157px;
 }
@@ -99,19 +114,19 @@ input {
 }
 
 .send-message {
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 700;
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #FFFFFF;
+  color: #ffffff;
   width: 369px;
   height: 57px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #ED1E24;
+  background: #ed1e24;
 }
 
 .mt-chain {
@@ -123,22 +138,29 @@ input {
 }
 
 .red {
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
-
 .location {
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 700;
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
+  margin-bottom: 77px;
+}
+.map-chain {
+  margin-top: 124px;
 }
 
 .banner-faq {
   margin-top: 150px;
+  margin-bottom: 100px;
+}
+.banner-faq .container {
+  padding-right: 0px !important;
 }
 
 .mt-faq {
@@ -150,7 +172,9 @@ input {
   font-size: 128px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
+  font-family: Helvetica;
+  margin-top: 50px;
 }
 
 .banner-faq h5 {
@@ -159,7 +183,7 @@ input {
   font-size: 24px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .frequently {
@@ -168,7 +192,8 @@ input {
   font-size: 20px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #FFFFFF;
+  color: #ffffff;
+  font-family: Helvetica;
 }
 
 .banner-faq .faq-point {
@@ -177,26 +202,37 @@ input {
   font-size: 22px;
   line-height: 130%;
   letter-spacing: 0.135em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .faq-point p {
   line-height: 130%;
 }
 
-
 /* ---Responsive----------- */
-@media screen and (max-width:992px){
-  .mt-sm{
+@media screen and (max-width: 992px) {
+  .mt-sm {
     margin-top: 40px;
   }
-  .contact-banner{
-    background-color:inherit;
+  .chain-sm {
+    margin-top: 50px;
+    padding-left: 20px;
+  }
+  .banner-contact {
+    margin-top: 50px !important;
+  }
+  .map-chain {
+    margin-top: 50px;
+    padding-left: 10px;
+  }
+  .banner-faq {
+    margin: 50px 0px;
+  }
+  .contact-banner {
+    background-color: inherit;
     height: inherit;
-    
   }
   .faq {
     font-size: 80px;
   }
-  
 }
