--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -12,8 +12,7 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
-
+  color: #ed1e24;
 }
 
 .about-yatra p {
@@ -22,7 +21,7 @@
   font-size: 18px;
   line-height: 160%;
   letter-spacing: 0.05em;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .mission-box {
@@ -35,23 +34,22 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
 
 .box-team {
   border-radius: 19px;
-  border: 1px solid #ED1E24;
+  border: 1px solid #ed1e24;
   height: 606px;
 }
 
-
 /* ---------responsive---- */
 
-@media screen and (max-width:992px){
-  .box-mission{
+@media screen and (max-width: 992px) {
+  .box-mission {
     margin-top: 80px;
   }
-  .box-team{
+  .box-team {
     margin-top: 50px;
   }
 }
