--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -8,17 +8,16 @@
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
   margin: 97px 0px;
 }
 
 .banner-4 h3 {
   font-family: 'Helvetica Rounded';
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 115.5%;
-letter-spacing: 0.05em;
-color: #ED1E24;
-
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ed1e24;
 }
