--- a/src/components/Footerbox/style.css
+++ b/src/components/Footerbox/style.css
@@ -1,33 +1,32 @@
 .display-flex {
-    display: flex;
-    /* margin-top: 50px; */
-    align-items: center;
-    height: 60%;
+  display: flex;
+  /* margin-top: 50px; */
+  align-items: center;
+  height: 60%;
 }
 
 .footer h3 {
-    font-style: normal;
-    font-weight: 800;
-    font-size: 24px;
-    line-height: 115.5%;
-    letter-spacing: 0.05em;
-    color: #ED1E24;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 24px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ed1e24;
 }
 
 .img-link {
-    height: 30px;
+  height: 30px;
 }
 
-
 .footer .link {
-    margin-top: 30px;
-    color: #ffffff;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 115.5%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
+  margin-top: 30px;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 .link2{
     word-break: break-all;
