--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,35 +1,35 @@
 .navbar .navbar-nav .nav-link:hover,
 .navbar .navbar-nav .nav-link.active {
-    color: #ED1E24 !important;
+  color: #ed1e24 !important;
 }
 .navbar-toggler:focus {
-    color: transparent;
-  }
+  color: transparent;
+}
 
 .active {
-    color: #ED1E24;
+  color: #ed1e24;
 }
 
 .nav-details {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 115.5%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
 .nav-link {
-    font-family: 'Orbitron';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 115.5%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
+  font-family: 'Orbitron';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
-.email{
-    display: flex;
+.email {
+  display: flex;
 }
 
 /* @media (max-width:992px){
@@ -38,20 +38,18 @@
     }
 } */
 .home {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 115.5%;
-    letter-spacing: 0.05em;
-    color: #FFFFFF;
-
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
-@media screen and (max-width:992px) {
-    .phn-no{
+@media screen and (max-width: 992px) {
+  .phn-no {
     display: none;
-
-    }
-    .email{
-        display: none;
-    }
+  }
+  .email {
+    display: none;
+  }
 }
