--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -26,7 +26,7 @@
 }
 
 .banner-machine ul li {
-  font-family: 'Poppins';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 600;
   font-size: 18px;
