--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+.phone-numbers{
+  word-wrap:break-word;
+}
 .contact-us-section {
   margin-top: 110px;
 }
@@ -83,6 +91,13 @@
 input {
   width: 223px;
   height: 62px;
+  font-family: 'Orbitron';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px !important;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF !important;
 }
 
 .form-bg {
@@ -105,7 +120,13 @@ input {
 }
 
 ::placeholder {
-  color: #ffffff !important;
+  font-family: 'Orbitron';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px !important;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #FFFFFF !important;
 }
 
 .send-btn {
@@ -117,7 +138,7 @@ input {
   font-family: Helvetica;
   font-style: normal;
   font-weight: 700;
-  font-size: 38px;
+  font-size: 20px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
   color: #ffffff;
@@ -127,6 +148,10 @@ input {
   align-items: center;
   justify-content: center;
   background: #ed1e24;
+}
+
+button {
+  border: none;
 }
 
 .mt-chain {
