remove font family from body

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,14 +1,14 @@
 .banner-1 img {
   width: 100%;
 }
-.about-text{
-font-family: 'Helvetica';
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 160%;
-letter-spacing: 0.05em;
-color: #FFFFFF;
+.about-text {
+  font-family: 'Helvetica';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 160%;
+  letter-spacing: 0.05em;
+  color: #ffffff;
 }
 
 .about-yatra {
@@ -17,13 +17,12 @@ color: #FFFFFF;
 
 .about-yatra h1 {
   font-family: 'Helvetica Rounded';
-font-style: normal;
-font-weight: 700;
-font-size: 38px;
-line-height: 115.5%;
-letter-spacing: 0.05em;
-color: #ED1E24;
-
+  font-style: normal;
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 115.5%;
+  letter-spacing: 0.05em;
+  color: #ed1e24;
 }
 
 .mission-box {
@@ -40,13 +39,8 @@ color: #ED1E24;
 }
 
 .box-team {
-<<<<<<< HEAD
-  border-radius: 19px;
-  border: 1px solid #ed1e24;
-=======
   border-radius: 42px;
-  border: 1px solid #ED1E24;
->>>>>>> 2eda39b (change on it according to figma)
+  border: 1px solid #ed1e24;
   height: 606px;
 }
 
