--- a/src/styles/service.css
+++ b/src/styles/service.css
@@ -3,17 +3,21 @@
 }
 
 .banner-provide h1 {
+  font-family: 'Helvetica';
   font-weight: 700;
   font-size: 38px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
+  margin: 97px 0px;
 }
 
 .banner-4 h3 {
-  font-weight: 400;
+  font-family: 'Helvetica Rounded';
+  font-style: normal;
+  font-weight: 700;
   font-size: 24px;
   line-height: 115.5%;
   letter-spacing: 0.05em;
-  color: #ED1E24;
+  color: #ed1e24;
 }
