--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -91,7 +91,7 @@ input[type='number']::-webkit-inner-spin-button {
 input {
   width: 223px;
   height: 62px;
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 500;
   font-size: 18px !important;
@@ -120,7 +120,7 @@ input {
 }
 
 ::placeholder {
-  font-family: 'Orbitron';
+  font-family: Helvetica;
   font-style: normal;
   font-weight: 500;
   font-size: 18px !important;
